# QuizyBot

./: .env.template  Quizypedia__quizypedia Sciences.txt  Quizypedia__quizypedia culture moderne.txt  Quizypedia__quizypedia geographie.txt  Quizypedia_botanimaux.txt  Quizypedia_classique.txt  Quizypedia_generale  Quizypedia_moderne.txt  Quizypedia_sport.txt  bot.py  pyproject.toml  request.py  top_players.txt
essentiels/: Quizypedia_botanimaux.txt  Quizypedia_classique.txt  Quizypedia_generale.txt  Quizypedia_geographie.txt  Quizypedia_histoire.txt  Quizypedia_sciences.txt  Quizypedia_sport.txt
