[tool.poetry]
name = "quizybot"
version = "0.1.0"
description = ""
authors = ["Allan Delautre <allandela@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
